...
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/gradientreverse"
    tools:context=".ui.settings.AccountInfo"
    android:id="@+id/accountRelative">

    <LinearLayout
        android:id="@+id/fNameLayout"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerVertical="true"
...
        android:layout_centerVertical="true"
        android:paddingLeft="40dp"
        android:padding="10dp"
        android:layout_below="@+id/pNameFromDatabaseLayout">

        <TextView
            android:id="@+id/trackerIDFromDatabase"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="23sp"
            android:textColor="@color/colorWords"
            android:text="ID here"/>

...
