<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/gradient"
    android:id="@+id/signInScreenRelative"

    tools:context=".SignInScreen">

    <LinearLayout
        android:id="@+id/emailAddresslayoutSignIn"
        android:padding="5dp"
        android:layout_centerVertical="true"
        android:layout_centerHorizontal="true"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@+id/errorMessageLayout">

        <EditText
            android:id="@+id/emailAddress"
            android:width="300dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:ems="10"
            android:hint="@string/e_mail_address"
            android:inputType="textEmailAddress"

            android:textColor="@color/colorWords"
            android:textColorHint="@color/colorWords" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/enterPasswordLayout"
        android:padding="5dp"
        android:layout_centerHorizontal="true"
        android:layout_centerVertical="true"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content">

        <EditText
            android:id="@+id/passwordText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:width="300dp"
            android:ems="10"
            android:hint="@string/password"
            android:textColor="@color/colorWords"
            android:inputType="textPassword"
            android:textColorHint="@color/colorWords" />

    </LinearLayout>

    <LinearLayout
        android:id="@+id/buttonSigninLayout"
        android:padding="10dp"
        android:layout_centerVertical="true"
        android:layout_centerHorizontal="true"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/enterPasswordLayout">

        <Button
            android:id="@+id/buttonSignin"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:width="140dp"
            android:text="@string/sign_in"
            android:textColor="@color/colorWords"
            android:textSize="17sp" />

    </LinearLayout>

    <LinearLayout
        android:id="@+id/errorMessageLayout"
        android:layout_centerHorizontal="true"
        android:layout_centerVertical="true"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@+id/enterPasswordLayout">

        <TextView
            android:id="@+id/warningText"
            android:textAlignment="center"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/username_or_password_is_incorrect"
            android:textColor="@color/colorWarning"
            android:textSize="20sp"
            android:textStyle="bold"
            android:visibility="invisible" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/forgotPasswordButtonLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_centerVertical="true"
        android:layout_centerHorizontal="true">

        <Button
            android:id="@+id/forgotPasswordButton"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/forgot_password"
            android:textColor="@color/colorWords"
            android:textSize="17sp"/>

    </LinearLayout>


</RelativeLayout>