...
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/gradient"
    tools:context=".ui.settings.AboutInfo"
    android:id="@+id/aboutRelative">


    <LinearLayout
        android:id="@+id/About1"
        android:layout_above="@id/About2"
        android:padding="10dp"
...
